solutions for lesson 2, add some text to challenge

--- a/lessons/02_bag_of_words.ipynb
+++ b/lessons/02_bag_of_words.ipynb
@@ -162,7 +162,7 @@
     "If you have time, try the following:\n",
     "\n",
     "* How much time separates the earliest and latest tweets?\n",
-    "* Who gets more retweets: positive, negative, or neutral tweets?\n",
+    "* What gets more retweets: positive, negative, or neutral tweets?\n",
     "* Which airline receives the highest proportion of negative tweets?"
    ]
   },
@@ -516,7 +516,7 @@
     "\n",
     "* Print out the most infrequent words rather than the most frequent words. If you're not sure how, check the [documentation](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.sort_values.html)!\n",
     "* Print the average number of times each word is used in a tweet.\n",
-    "* Which token appears the most in any given tweet? How many times does it appear? What is the original tweet?"
+    "* Which non-hashtag, non-digit token appears the most in any given tweet? How many times does it appear? What is the original tweet?"
    ]
   },
   {
@@ -570,7 +570,11 @@
    "id": "3e8b5145-d505-4e36-9a39-a40d25d8ec6f",
    "metadata": {},
    "source": [
-    "## Challenge 4: Customizing the Vectorizer with `nltk` inputs"
+    "## Challenge 4: Customizing the Vectorizer with `nltk` inputs\n",
+    "\n",
+    "If you look at the `CountVectorizer` documentation, you'll see that it can actually accept a custom `tokenizer` and `stop_words` list. \n",
+    "\n",
+    "Using what you learned in the previous workshop, create a `CountVectorizer` that utilize's the `nltk` word tokenizer and stop word list. How does the resulting DTM look different?"
    ]
   },
   {
@@ -583,31 +587,6 @@
     "from nltk.tokenize import word_tokenize\n",
     "from nltk.corpus import stopwords\n",
     "stop_words = stopwords.words('english')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "05a95ccc-b3e1-4528-97b8-5334ea3eb616",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create the vectorizer\n",
-    "vectorizer = CountVectorizer(\n",
-    "    lowercase=True,\n",
-    "    tokenizer=word_tokenize,\n",
-    "    stop_words=stop_words,\n",
-    "    min_df=2,\n",
-    "    max_df=0.95)\n",
-    "# Fit, transform, and get tokens\n",
-    "counts = vectorizer.fit_transform(tweets['text_processed'])\n",
-    "tokens = vectorizer.get_feature_names_out()\n",
-    "# Create dataframe\n",
-    "dtm = pd.DataFrame(data=counts.todense(),\n",
-    "                   index=tweets.index,\n",
-    "                   columns=tokens)\n",
-    "print(dtm.shape)\n",
-    "dtm.head()"
    ]
   },
   {
@@ -1095,6 +1074,19 @@
     "## Challenge 6\n",
     "\n",
     "Create a new fitter function that uses a `RandomForestClassifier`. How is the performance? Check the [documentation](https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestClassifier.html) for more details."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ecf07d41-bcf1-4ed2-a699-a53f26a5ff2f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fit_random_forest(X, y):\n",
+    "    \"\"\"Fits a random forest model to provided data.\"\"\"\n",
+    "    # YOUR CODE HERE\n",
+    "    return"
    ]
   }
  ],
