finish word embeddings, solutions, image

--- a/lessons/03_word_embeddings.ipynb
+++ b/lessons/03_word_embeddings.ipynb
@@ -5,7 +5,7 @@
    "id": "2c0c2f15-1a64-4b2b-8ca1-270f05aa24b9",
    "metadata": {},
    "source": [
-    "# Introduction to Word Embeddings"
+    "# Python Text Analysis: Word Embeddings"
    ]
   },
   {
@@ -25,23 +25,37 @@
    "id": "94fc6996",
    "metadata": {},
    "source": [
-    "# The Word Embedding Model"
+    "# The Word Embedding Model: `word2vec`"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c70bc214",
+   "cell_type": "markdown",
+   "id": "ef6396f1-6baa-49cb-8a4a-3679732f315e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "The word embedding model, generally referred to as `word2vec`, was developed by [Mikolov et al.](https://arxiv.org/abs/1310.4546) in 2013. The basic premise is to find vector representations of tokens that have semantic meaning. How do we go about learning a \"good\" vector representation from the data?\n",
+    "\n",
+    "Mikolov et al. proposed two approaches: the **skip-gram (SG)** and the **continuous bag-of-words (CBOW)**. Both approaches are similar in that we use the vector representation of a token to try and predict what the nearby tokens are with a shallow neural network.\n",
+    "\n",
+    "![word2vec](../images/word2vec.png)\n",
+    "\n",
+    "In the continuous bag-of-words model, our goal is to predict a word $w(t)$, given the words that surround it - e.g., $w(t-2), w(t-1), w(t+1), w(t+2)$, etc. So, in an example text such as `I went to the store to get some apples`, we may try to use the word vectors for `I`, `went`, `to`, `the`, `to`, `get`, `some`, `apples` to predict the word `store`. This would correspond to a *window size* of 4: 4 words on either side of the target word.\n",
+    "\n",
+    "In the skip-gram model, we construct a word vector that can be used to predict the words surrounding a specific word $w(t)$. This is the reverse of the continuous bag-of-words, and is a harder task, since we have to predict more from less information. In the above example, we'd aim to predict the remaining words in the sentence from the word vector for `store`. \n",
+    "\n",
+    "You can use either approaches to build a set of word embeddings. Mikolov et al. demonstrated that the skip-gram works pretty well in larger corpuses. Furthermore, it's easier to train the skip-gram efficiently, making it faster.\n",
+    "\n",
+    "The mechanics of how the training is actually done revolves around a **shallow neural network**. An **objective function** is specified - a mathematical expression that quantifies how well we predicted a word - which allows the values of the word vectors to be optimized using **back propagation**. We won't go into these details for this workshop, but check out the Python Deep Learning workshop if you'd like to learn more about neural networks!\n",
+    "\n",
+    "Let's jump into it!"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "3aaa0a94",
    "metadata": {},
    "source": [
-    "# Install and Import"
+    "# Installing `gensim`"
    ]
   },
   {
@@ -52,7 +66,12 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import re\n",
+    "\n",
+    "from pyprojroot import here\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LogisticRegressionCV"
    ]
   },
   {
@@ -83,6 +102,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import gensim\n",
     "import gensim.downloader as api"
    ]
   },
@@ -235,28 +255,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "06d095a1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "wv.most_similar_cosmul()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "b49ce27b",
    "metadata": {},
    "source": [
-    "### Challenge 1"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1ee0ead0",
-   "metadata": {},
-   "source": [
+    "## Challenge 1\n",
+    "\n",
     "Look up the `doesnt_match` function in `gensim`'s documentation. Use this function to identify which word doesn't match in the following group:\n",
     "\n",
     "banana, apple, strawberry, happy\n",
@@ -265,7 +269,7 @@
     "\n",
     "1. A group of fruits, and a vegetable. Can it identify that the vegetable doesn't match?\n",
     "2. A group of vehicles that travel by land, and a vehicle that travels by air (e.g., a plane or helicopter). Can it identify the vehicle that flies?\n",
-    "3. A group of scientists (e.g., biologist, physicist, chemist, etc.) and a person who does not study science (e.g., an artist). Can it identify the occupation that is not science based?\n",
+    "3. A group of scientists (e.g., biologist, physicist, chemist, etc.) and a person who does not study an empirical science (e.g., an artist). Can it identify the occupation that is not science based?\n",
     "\n",
     "To be clear, `word2vec` does not learn the precise nature of the differences between these groups. However, the semantic differences correspond to similar words appearing near each other in large corpora."
    ]
@@ -285,7 +289,7 @@
    "source": [
     "One of the most famous usages of `word2vec` is via word analogies. For example:\n",
     "\n",
-    "Paris is to France as Berlin is to Germany. \n",
+    "`Paris : France :: Berlin : Germany`\n",
     "\n",
     "Here, the analogy is between (Paris, France) and (Berlin, Germany), with \"capital city\" being the concept that connects them. We can abstract the \"analogy\" relationship to vector modeling. Let's pretend we're working with each of the vectors. Then, the analogy is\n",
     "\n",
@@ -347,10 +351,14 @@
     "\n",
     "1. Mouse : Mice :: Goose : ?\n",
     "2. Kangaroo : Joey :: Cat : ?\n",
-    "3. Mexico : Peso :: Dollar : ?\n",
+    "3. United States : Dollar :: Mexico : ?\n",
     "4. Happy : Sad :: Up : ?\n",
-    "4. California : Sacramento :: Canada : ?\n",
-    "5. California : Sacramento :: Washington : ?\n",
+    "5. California : Sacramento :: Canada : ?\n",
+    "6. California : Sacramento :: Washington : ?\n",
+    "\n",
+    "What about something more abstract, such as:\n",
+    "\n",
+    "7. United States : hamburger :: Canada : ?\n",
     "\n",
     "Some work well, and others don't work as well. Try to come up with your own analogies!"
    ]
@@ -365,10 +373,389 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a87b1931",
+   "id": "5397cb46-3c81-49e9-b7bb-37efe55803d4",
    "metadata": {},
    "source": [
-    "# Document Embeddings"
+    "In the previous example, we used a *pretrained* word embedding. That is, the word embedding was already trained using a very large corpus from Google News. What about when we want to train our own word embeddings from a new corpus?\n",
+    "\n",
+    "We can do that using `gensim` as well. However, if the corpus is large, training becomes very computationally taxing. So, we'll try training our own word embeddings, but on a much smaller corpus. Specifically, we'll return to one you should recognize: the airline tweets corpus!\n",
+    "\n",
+    "Let's go ahead and get set up by importing the dataset and preprocessing, as we did in Part 2."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9dda1c4d-5006-422d-a3c6-857d59a08f02",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tweets_path = here('data/airline_tweets.csv')\n",
+    "tweets = pd.read_csv(tweets_path, sep=',')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8a22b90-c66d-4ab0-a164-bd30c67241af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def preprocess(text):\n",
+    "    \"\"\"Preprocesses a string.\"\"\"\n",
+    "    # Lowercase\n",
+    "    text = text.lower()\n",
+    "    # Replace URLs\n",
+    "    url_pattern = r'https?:\\/\\/.*[\\r\\n]*'\n",
+    "    url_repl = ' URL '\n",
+    "    text = re.sub(url_pattern, url_repl, text)\n",
+    "    # Replace digits\n",
+    "    digit_pattern = '\\d+'\n",
+    "    digit_repl = ' DIGIT '\n",
+    "    text = re.sub(digit_pattern, digit_repl, text)\n",
+    "    # Replace hashtags\n",
+    "    hashtag_pattern = r'(?:^|\\s)[＃#]{1}(\\w+)'\n",
+    "    hashtag_repl = ' HASHTAG '\n",
+    "    text = re.sub(hashtag_pattern, hashtag_repl, text)\n",
+    "    # Replace users\n",
+    "    user_pattern = r'@(\\w+)'\n",
+    "    user_repl = ' USER '\n",
+    "    text = re.sub(user_pattern, user_repl, text)\n",
+    "    # Remove blank spaces\n",
+    "    blankspace_pattern = r'\\s+'\n",
+    "    blankspace_repl = ' '\n",
+    "    text = re.sub(blankspace_pattern, blankspace_repl, text).strip()\n",
+    "    return text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bfb5e805-3750-449c-ac6e-6fee95c0896c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tweets['text_processed'] = tweets['text'].apply(lambda x: preprocess(x))\n",
+    "tweets['text_processed'].head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bbb98145-a9ae-47ec-9928-99d850e57586",
+   "metadata": {},
+   "source": [
+    "To create our own model, we need to import the `Word2Vec` module from `gensim`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "126c3ba3-c322-43f2-ae73-f0244a68b65f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from gensim.models import Word2Vec"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "07f07191-ce87-46a2-bd09-2729312f25a4",
+   "metadata": {},
+   "source": [
+    "You can check out the documentation for this module [here](https://radimrehurek.com/gensim/models/word2vec.html#gensim.models.word2vec.Word2Vec). The main input to `Word2Vec` is a `sentences` argument, which consists of a list of lists: the outer list enumerates the documents, and the inner list enumerates the tokens within in each list. So, we need to run a word tokenizer on each of the tweets. Let's use `nltk`'s word tokenizer:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4c5a6831-5b42-4ed3-99b8-3241b84a4785",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nltk.tokenize import word_tokenize"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "efe2ca18-d18c-4248-924e-92fe5c9f97cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sentences = [word_tokenize(tweet) for tweet in tweets['text_processed']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a6e0abf-8a99-49f1-aaf5-ea21cb56cf50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sentences[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b273230a-5c31-4156-a183-53fdd7aecc78",
+   "metadata": {},
+   "source": [
+    "Now, we train the model. We are going to use CBOW to train the model since it's better suited for smaller datasets. Take note of what other arguments we set:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ceaf88ad-677f-47de-bde5-cca609c7a243",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = Word2Vec(\n",
+    "    sentences=sentences,\n",
+    "    vector_size=30,\n",
+    "    window=5,\n",
+    "    min_count=1,\n",
+    "    sg=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7997232a-2337-4709-87c0-f8e40971d1a1",
+   "metadata": {},
+   "source": [
+    "The model is now trained! Let's take a look at some word vectors. We can access them using the `wv` attribute:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91bbdcaa-e04c-42fa-8b28-9b892f7abe89",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(model.wv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4f1b2108-6022-4e78-ac4b-56bf80665d15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.wv['worst']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc5b9a5f-3d8c-4e61-a24f-23ed9bda530d",
+   "metadata": {},
+   "source": [
+    "Let's try running a `most_similar` query to see what we end up with:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4578c24a-b913-4254-8a6c-ac4de77c878c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.wv.most_similar('worst')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fde0ac2f-bac5-40bf-8f3b-81031183c9da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.wv.most_similar('great')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a16554ab-06c8-4fc4-8d2f-1e134263bf8e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.wv.most_similar('united')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d8e92543-087b-4ec6-b490-fb5f14dcec77",
+   "metadata": {},
+   "source": [
+    "The `word2vec` model learned these relationships from the roughly 11,000 tweets in the corpus. These relationships look similar to some in the Google News word embeddings, have some differences that stem from the particular nature of the corpus, and the smaller number of documents."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "de9b7584-91cc-43bf-8279-400c1bf3ccf1",
+   "metadata": {},
+   "source": [
+    "## Challenge 3\n",
+    "\n",
+    "Try experimenting with different numbers of vector sizes, window sizes, and other parameters available in the `Word2Vec` module. Additionally, try training using skip-grams rather than CBOW."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d2bb2f9-1cd8-4e8c-b121-d087d7449bbe",
+   "metadata": {},
+   "source": [
+    "# Classifying with Trained Embeddings"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "44ce2d62-3d5b-4943-9266-e3f1241281cf",
+   "metadata": {},
+   "source": [
+    "In the previous module, we used the airline tweets dataset to perform sentiment classification: we tried to classify the sentiment of a text given the bag-of-words representation. Can we do something similar with a word embedding representation?\n",
+    "\n",
+    "In the word embedding representation, we have an $N$-dimensional vector for each word in a tweet. How can we come up with a representation for the entire tweet?\n",
+    "\n",
+    "The simplest approach we could take is to simply average the vectors together to come up with a \"tweet representation\". Let's see how this works for predicting sentiment classification.\n",
+    "\n",
+    "First, we need to subset the dataset into the tweets which only have positive or negative sentiment:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ae7a379-1f02-417e-9dbd-76af895e50af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tweets_binary = tweets[tweets['airline_sentiment'] != 'neutral']\n",
+    "y = tweets_binary['airline_sentiment']\n",
+    "print(y.value_counts(normalize=True))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35def02f-4232-4643-b427-1fedbf472905",
+   "metadata": {},
+   "source": [
+    "Now, we need to compute the feature matrix. We will query the word vector in each tweet, and come up with an average for the sample:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c0588d51-6d9e-4566-919b-2d75fd4e9e6d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vector_size = 30\n",
+    "X = np.zeros((len(y), vector_size))\n",
+    "\n",
+    "# Enumerate over tweets\n",
+    "for idx, tweet in enumerate(tweets_binary['text_processed']):\n",
+    "    # Tokenize the current tweet\n",
+    "    tokens = word_tokenize(tweet)\n",
+    "    n_tokens = len(tokens)\n",
+    "    # Enumerate over tokens, obtaining word vectors\n",
+    "    for token in tokens:\n",
+    "        X[idx] += model.wv.get_vector(token)\n",
+    "    # Take the average\n",
+    "    X[idx] /= n_tokens"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "78f75f96-ca46-421b-b5a6-7cd47af0c997",
+   "metadata": {},
+   "source": [
+    "As before, we'll proceed with splitting the data into train/test examples. We'll bring back the logistic fitter function from before, with some small changes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "654f81cb-a4ca-4c4d-a7b9-376b6b974988",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d0f37a2-0712-4d46-93ab-6bdacba845b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fit_logistic_regression(X, y):\n",
+    "    \"\"\"Fits a logistic regression model to provided data.\"\"\"\n",
+    "    model = LogisticRegressionCV(\n",
+    "        Cs=10,\n",
+    "        penalty='l2',\n",
+    "        max_iter=1000,\n",
+    "        cv=5,\n",
+    "        refit=True).fit(X, y)\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b8126b42-f8ca-49af-8a8f-f243212478c9",
+   "metadata": {},
+   "source": [
+    "We then run the fit, and evaluate it!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f00d9f99-c44e-4b91-b905-32b70ce6674f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fit the logistic regression model\n",
+    "model = fit_logistic_regression(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c59c916c-ba50-4336-b345-6e9ef29b27fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"Training accuracy: {model.score(X_train, y_train)}\")\n",
+    "print(f\"Test accuracy: {model.score(X_test, y_test)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "40e7141f-2df5-4f1a-a356-aac82c44f982",
+   "metadata": {},
+   "source": [
+    "While this performance is pretty good, it's definitely not as good as the bag-of-words representation we used in the previous module. There are few reasons this might be the case:\n",
+    "\n",
+    "1. We used a word embedding on a relatively small corpus. A word embedding obtained from a very large corpus would perform better. The tricky part in doing this is that our smaller corpus may have some niche tokens that are not in the larger model, so we'd have to work around that.\n",
+    "2. We simply averaged word embeddings across tokens. When doing this, we lose meaning in the ordering of words. Other methods, such as `doc2vec`, have been proposed to address these concerns.\n",
+    "3. Word embeddings might be an overly complicated approach for the task at hand. In a tweet aimed at an airline, a person needs to convey their sentiment in only 140 characters. So they are more likely to use relatively simple words that easily convey sentiment, making a bag-of-words a natural approach.\n",
+    "\n",
+    "It's important to note that we also lose out on the interpretability of the logistic regression model, because the actual dimensions of each word vector do not themselves have any meaning. \n",
+    "\n",
+    "Moral of the story: word embeddings are great, but always start with the simpler model! This is a good way to baseline other approaches, and it might actually work pretty well!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e443ff3f-bc6d-4190-b7aa-109d7909a242",
+   "metadata": {},
+   "source": [
+    "## Challenge 4\n",
+    "\n",
+    "Write a function that performs the pipeline of building a `word2vec` model and constructing a design matrix. Use this function to try and see if you can change the performance of the model with other parameters (vector sizes, window sizes, etc.)."
    ]
   }
  ],
