small updates to lesson 1

--- a/lessons/01_preprocessing.ipynb
+++ b/lessons/01_preprocessing.ipynb
@@ -17,9 +17,9 @@
     "\n",
     "So, the million dollar question: How exactly do we go about performing computational methods on words?\n",
     "\n",
-    "This is ultimately a question of *representations*. Text naturally is represented as words, which are understandable to humans because we have a grammatical and syntactical structure we use to extract meaning from those words. However, most machine learning and data science techniques are utilize numerical methods to extract patterns from large datasets. We need to find a way to convert the language into a numerical representation. We'll start with this goal in mind, and demonstrate how involved this process can be.\n",
+    "This is ultimately a question of *representations*. Text naturally is represented as words, which are understandable to humans because we have a grammatical and syntactical structure we use to extract meaning from those words. However, most machine learning and data science techniques utilize numerical methods to extract patterns from large datasets. So, we need to find a way to convert the language into a numerical representation. We'll start with this goal in mind, and demonstrate how involved this process can be.\n",
     "\n",
-    "We'll start this process by first importing text into Python. Then, we'll cover a variety of preprocessing steps you might want to use before proceeding with computational methods. Finally, we'll conclude with the bag-of-words, or the first numerical representation of text that we'll encounter in this workshop series."
+    "We'll start this process by first importing text into Python. Then, we'll cover a variety of preprocessing steps you might want to use before proceeding with computational methods. In the next sequence of this workshop, we'll work with the bag-of-words, or the first numerical representation of text that we'll encounter in this workshop series."
    ]
   },
   {
@@ -37,7 +37,7 @@
    "source": [
     "Text data we want to analyze will be stored in external files that need to be imported. These files will generally be text files (`.txt`) or comma separated value files (`.csv`).\n",
     "\n",
-    "All the data used in this notebook are stored in a `data` folder that we need to access. The `pyprojroot` package makes it easy to access the `data` folder from where we are in the notebook!"
+    "All the data used in this notebook are stored in a `data` folder that we need to access. The `pyprojroot` package makes it easy to access the `data` folder without having to worry about filepaths!"
    ]
   },
   {
@@ -111,7 +111,7 @@
    "id": "414ef3f4-1c0c-4c79-918f-72175a1292d3",
    "metadata": {},
    "source": [
-    "## Challenge 1: Working with `string`s\n",
+    "## Challenge 1: Working with Strings\n",
     "\n",
     "* What type of object is `sowing_and_reaping`?\n",
     "* How many characters are in `sowing_and_reaping`?\n",
@@ -131,7 +131,7 @@
    "id": "b38f7db8-ecf6-4331-a26b-8a033f5731d0",
    "metadata": {},
    "source": [
-    "Often, we may have data stored in \"dataframes\" or \"tables\", which consists of many samples (rows), each containing several features (columns). Among the features is likely a text column which contains the text of interest. These dataframes are often found as Comma Separated Value (CSV) files (and somewhat less frequently as tab separated value (TSV) files). In either case, there is some \"delimiter\" (i.e., a comma or tab) which helps separates entries from each other.\n",
+    "Often, we may have data stored in \"dataframes\" or \"tables\", which consists of many samples (rows), each containing several features (columns). Among the features is likely a text column which contains the text of interest. These dataframes are often found as Comma Separated Value (CSV) files (and somewhat less frequently as tab separated value (TSV) files). In either case, there is some \"delimiter\" (i.e., a comma or tab) which helps separate entries from each other.\n",
     "\n",
     "The `pandas` package is the best package for dealing with dataframes in Python, and this package comes with its own function for reading CSV files. For example, let's read in a file containing many Tweets about airlines:"
    ]
@@ -231,9 +231,11 @@
    "outputs": [],
    "source": [
     "for file in files:\n",
-    "    # YOUR CODE HERE\n",
-    "    text = ''\n",
-    "    reviews.extend(text)"
+    "    # Check that the file is actually a CSV file\n",
+    "    if os.path.splitext(file)[1] == '.csv':\n",
+    "        # YOUR CODE HERE\n",
+    "        text = ''\n",
+    "        reviews.extend(text)"
    ]
   },
   {
@@ -650,9 +652,9 @@
     "\n",
     "In Challenge 1, we imported many Amazon reviews, and stored them in a variable called `reviews`. Each element of the list is a string, representing the text of a single review. For each review:\n",
     "\n",
-    "* Strip all whitespace.\n",
-    "* Make all characters lower case.\n",
     "* Replace any URLs and digits.\n",
+    "* Make all characters lower case.\n",
+    "* Strip all blankspace.\n",
     "\n",
     "Keep in mind: the order in which you do these steps matters!"
    ]
@@ -695,7 +697,7 @@
    "id": "6b402ed3-de7f-4e16-ade6-444c9e74f8eb",
    "metadata": {},
    "source": [
-    "Let's try naively tokenizing by splitting up the text according to whitespace, using a basic Python string method:"
+    "Let's try naively tokenizing by splitting up the text according to blankspace, using a basic Python string method:"
    ]
   },
   {
@@ -888,7 +890,7 @@
     "\n",
     "Lemmatization is more general: it aims to find the lemma of a word, but can handle cases where stemming may not work. For example, the word \"fairies\" cannot be stemmed to the lemma, \"fairy\". So, we need additional rules - provided by lemmatization - that can appropriately turn \"fairies\" into \"fairy\".\n",
     "\n",
-    "NLTK provides many algorithms for stemming. We'll use the Snowball Stemmer, which we'll import from `nltk`. We'll also look at the Word Net Lemmatizer:"
+    "`nltk` provides many algorithms for stemming. We'll use the Snowball Stemmer, which we'll import from `nltk`. We'll also look at the Word Net Lemmatizer:"
    ]
   },
   {
@@ -1012,10 +1014,10 @@
     "\n",
     "Write a function called `preprocess()` that accepts a string and performs the following preprocessing steps:\n",
     "\n",
-    "* Strip whitespace.\n",
     "* Lowercase text.\n",
+    "* Replace all URLs and numbers with their respective tokens.\n",
+    "* Strip blankspace.\n",
     "* Tokenize.\n",
-    "* Replace all URLs and numbers with the token \"DIGIT\".\n",
     "* Remove punctuation.\n",
     "* Remove stop words.\n",
     "* Lemmatize the tokens.\n",
@@ -1104,6 +1106,16 @@
     "    example3 = file.read()\n",
     "    \n",
     "doc = nlp(example3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "64d59d76-d30c-44fb-b862-c208c3212e81",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(example3)"
    ]
   },
   {
