--- a/solutions/01_preprocessing_solutions.ipynb
+++ b/solutions/01_preprocessing_solutions.ipynb
@@ -70,7 +70,7 @@
    "id": "cd8599eb-1e4d-43db-b62c-dce158a18ce0",
    "metadata": {},
    "source": [
-    "## Challenge 1: Working with `string`s\n",
+    "## Challenge 1: Working with Strings\n",
     "\n",
     "* What type of object is `sowing_and_reaping`?\n",
     "* How many characters are in `sowing_and_reaping`?\n",
@@ -158,11 +158,12 @@
    "outputs": [],
    "source": [
     "for file in files:\n",
-    "    # YOUR CODE HERE\n",
-    "    full_path = os.path.join(amazon_path, file)\n",
-    "    reviews_df = pd.read_csv(full_path, sep=',', names=column_names) \n",
-    "    text = list(reviews_df['text'])\n",
-    "    reviews.extend(text)"
+    "    # Check that the file is actually a CSV file\n",
+    "    if os.path.splitext(file)[1] == '.csv':\n",
+    "        full_path = os.path.join(amazon_path, file)\n",
+    "        reviews_df = pd.read_csv(full_path, sep=',', names=column_names) \n",
+    "        text = list(reviews_df['text'])\n",
+    "        reviews.extend(text)"
    ]
   },
   {
@@ -174,9 +175,9 @@
     "\n",
     "In Challenge 1, we imported many Amazon reviews, and stored them in a variable called `reviews`. Each element of the list is a string, representing the text of a single review. For each review:\n",
     "\n",
-    "* Strip all blank space\n",
-    "* Make all characters lower case\n",
-    "* Replace any URLs and digits"
+    "* Replace any URLs and digits.\n",
+    "* Make all characters lower case.\n",
+    "* Strip all blankspaces."
    ]
   },
   {
@@ -362,10 +363,10 @@
     "\n",
     "Write a function called `preprocess()` that accepts a string and performs the following preprocessing steps:\n",
     "\n",
-    "* Strip whitespace.\n",
     "* Lowercase text.\n",
+    "* Replace all URLs and numbers with their respective tokens.\n",
+    "* Strip blankspace.\n",
     "* Tokenize.\n",
-    "* Replace all URLs and numbers with the token \"DIGIT\".\n",
     "* Remove punctuation.\n",
     "* Remove stop words.\n",
     "* Lemmatize the tokens.\n",
